# app/Api/V1/Controllers/UserController.php
@@ -148,4 +148,134 @@ class UserController extends Controller
 
         return response()->json($result, $result['success'] == true ? 200 : 400);
     }
+
+
+    /**
+     * 
+     * @OA\Get(
+     *     path="/api/v1/me",
+     *     tags={"Index"},
+     *     summary="Get the account details associated with the app",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Get the account details associated with the app",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="success",
+     *                 type="boolean",
+     *                 description="Indicates the operation was successful",
+     *                 example=true
+     *             ),
+     *             @OA\Property(
+     *                 property="result",
+     *                 type="object",
+     *                 description="The return object from the channel",
+     *                 example= {
+     *                  "id": "13696209441431539484",
+     *                  "name": "Opeyemi Ilesanmi",
+     *                  "username": "ilejohn"
+     *                 }
+     *             ),
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 description="A message indicating success",
+     *                 example="User retrieved"
+     *             ),
+     *          ),
+     *        )
+     *     )
+     * )
+     * 
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function getUser()
+    {
+        $result = $this->channelProvider->me();
+
+        return response()->json($result, $result['success'] == true ? 200 : 400);
+    }
+
+    /**
+     *    @OA\Post(
+     *     path="/api/v1/tweet",
+     *     summary="Post a tweet from the account associated with the app",
+     *     description="Post a tweet from the account associated with the app using the specified parameters.",
+     *     tags={"Index"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="text",
+     *                     type="string",
+     *                     description="The text to be tweeted",
+     *                     example="A random tweet from a laravel app"
+     *                 )
+     *             ),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="success",
+     *                 type="boolean",
+     *                 description="Indicates whether the action was successful",
+     *                 example=true
+     *             ),
+     *             @OA\Property(
+     *                 property="result",
+     *                 type="object",
+     *                 description="The return object",
+     *                 example={
+     *                  "edit_history_tweet_ids": "1727801020732801098",
+     *                      "id": "1727801020732801098",
+     *                      "text": "A random tweet from a laravel app"
+     *                  }
+     *             ),
+     *             @OA\Property(
+     *                 property="message",
+     *                 type="string",
+     *                 description="A message indicating success",
+     *                 example="Tweet successful"
+     *             ),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Error",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="error",
+     *                 type="string",
+     *                 description="An error message why the action was not successful",
+     *                 example="Error message"
+     *             ),
+     *             @OA\Property(
+     *                 property="success",
+     *                 type="boolean",
+     *                 description="Indicates the operation was unsuccessful",
+     *                 example=false
+     *             ),
+     *          ),
+     *        )
+     *    )
+     * 
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     *
+     */
+    public function tweet(Request $request)
+    {
+        $this->validate($request, [
+            'text' => 'required'
+        ]);
+
+        $result = $this->channelProvider->tweet($request->text);
+
+        return response()->json($result, $result['success'] == true ? 200 : 400);
+    }
 }
